--- a/info/index.html
+++ b/info/index.html
@@ -8,20 +8,22 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>info | Reversed Siddhartha</title>
 <meta name="title" content="info" />
-<meta name="description" content="Info Who Am I? I&rsquo;m a secular Buddhist Buddhist and an amateur photographer.
-I used to be a Mahasi noting pragmatic geek, obsessed with the Progress of Insight map.
+<meta name="description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
+I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
 My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Sam Harris, etc.) and Soto Zen.
  Contact If you want to contact me, please send an email to:
-ns |at| mahasivipassana |dot| com" />
+ns |at| mahasivipassana |dot| com
+If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="info" />
-<meta property="og:description" content="Info Who Am I? I&rsquo;m a secular Buddhist Buddhist and an amateur photographer.
-I used to be a Mahasi noting pragmatic geek, obsessed with the Progress of Insight map.
+<meta property="og:description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
+I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
 My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Sam Harris, etc.) and Soto Zen.
  Contact If you want to contact me, please send an email to:
-ns |at| mahasivipassana |dot| com" />
+ns |at| mahasivipassana |dot| com
+If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/info/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
 
@@ -34,22 +36,24 @@ ns |at| mahasivipassana |dot| com" />
 <meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="info"/>
-<meta name="twitter:description" content="Info Who Am I? I&rsquo;m a secular Buddhist Buddhist and an amateur photographer.
-I used to be a Mahasi noting pragmatic geek, obsessed with the Progress of Insight map.
+<meta name="twitter:description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
+I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
 My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Sam Harris, etc.) and Soto Zen.
  Contact If you want to contact me, please send an email to:
-ns |at| mahasivipassana |dot| com"/>
+ns |at| mahasivipassana |dot| com
+If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request."/>
 
 
 
 <meta itemprop="name" content="info">
-<meta itemprop="description" content="Info Who Am I? I&rsquo;m a secular Buddhist Buddhist and an amateur photographer.
-I used to be a Mahasi noting pragmatic geek, obsessed with the Progress of Insight map.
+<meta itemprop="description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
+I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
 My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Sam Harris, etc.) and Soto Zen.
  Contact If you want to contact me, please send an email to:
-ns |at| mahasivipassana |dot| com">
+ns |at| mahasivipassana |dot| com
+If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.">
 
-<meta itemprop="wordCount" content="109"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="108"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -230,8 +234,8 @@ ns |at| mahasivipassana |dot| com">
 <content>
   <h1 id="info">Info</h1>
 <h2 id="who-am-i">Who Am I?</h2>
-<p>I&rsquo;m a secular Buddhist Buddhist and an <a href="https://vlzetko.com">amateur photographer</a>.</p>
-<p>I used to be a <a href="https://mahasivipassana.com">Mahasi noting</a> pragmatic geek, obsessed with the <a href="https://mahasivipassana.com/the-progress-of-insight-map/">Progress of Insight map</a>.</p>
+<p>I&rsquo;m a secular Buddhist and an <a href="https://vlzetko.com">amateur photographer</a>.</p>
+<p>I used to be a pragmatic <a href="https://mahasivipassana.com">Mahasi noting</a> geek, obsessed with the <a href="https://mahasivipassana.com/the-progress-of-insight-map/">Progress of Insight map</a>.</p>
 <p>My current practice is heavily influenced by <a href="https://ashintejaniya.org/">Asin Tejaniya</a>, various secular non-dual teachers (<a href="https://dianawinston.com">Diana Winston</a>, <a href="https://lochkelly.org">Loch Kelly</a>, <a href="https://samharris.org">Sam Harris</a>, etc.) and <a href="https://www.sotozen.com/eng">Soto Zen</a>.</p>
 <p> </p>
 <h2 id="contact">Contact</h2>
