--- a/dharma/index.html
+++ b/dharma/index.html
@@ -53,7 +53,7 @@
   Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
   Metta (Loving Kindness) (from this post)">
 
-<meta itemprop="wordCount" content="430"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="436"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -271,7 +271,7 @@
 </blockquote>
 <p> </p>
 <h3 id="are-you-interested-in-noting">Are you interested in noting?</h3>
-<p>If you have decided to go with noting (which is <a href="https://mahasivipassana.com">Mahasi Sayadaw&rsquo;s Vipassana</a> technique), apart from theintroductory text included in the above pack, you can also read the following material:</p>
+<p>If you have decided to go with noting (which actually is nothing more than <a href="https://mahasivipassana.com">Mahasi Sayadaw&rsquo;s famous Vipassana</a> technique), apart from the introductory text included in the above pack, you can also read the following material:</p>
 <ul>
 <li>
 <p><a href="https://mahasivipassana.com/docs/practical-vipassana-meditation-exercises/">Practical Vipassana Meditation Exercises</a></p>
