--- a/links/index.html
+++ b/links/index.html
@@ -8,26 +8,26 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>useful links | Reversed Siddhartha</title>
 <meta name="title" content="useful links" />
-<meta name="description" content="Useful Links Teachers   Mahasi Sayadaw
-  Sayadaw U Tejaniya
+<meta name="description" content="Useful Links Teachers   Sayadaw U Tejaniya
+  Loch Kelly
+  Diana Winston
    Suttas   SuttaCentral
   Pali Audio
-   Communities  r/streamentry (a practice oriented reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
+   Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
   Mastering the Core Teachings of the Buddha by Daniel Ingram
-  Contemplative Fitness by Kenneth Folk
-   Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)" />
+  Contemplative Fitness by Kenneth Folk" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="useful links" />
-<meta property="og:description" content="Useful Links Teachers   Mahasi Sayadaw
-  Sayadaw U Tejaniya
+<meta property="og:description" content="Useful Links Teachers   Sayadaw U Tejaniya
+  Loch Kelly
+  Diana Winston
    Suttas   SuttaCentral
   Pali Audio
-   Communities  r/streamentry (a practice oriented reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
+   Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
   Mastering the Core Teachings of the Buddha by Daniel Ingram
-  Contemplative Fitness by Kenneth Folk
-   Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)" />
+  Contemplative Fitness by Kenneth Folk" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/links/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
 
@@ -40,28 +40,28 @@
 <meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="useful links"/>
-<meta name="twitter:description" content="Useful Links Teachers   Mahasi Sayadaw
-  Sayadaw U Tejaniya
+<meta name="twitter:description" content="Useful Links Teachers   Sayadaw U Tejaniya
+  Loch Kelly
+  Diana Winston
    Suttas   SuttaCentral
   Pali Audio
-   Communities  r/streamentry (a practice oriented reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
+   Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
   Mastering the Core Teachings of the Buddha by Daniel Ingram
-  Contemplative Fitness by Kenneth Folk
-   Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)"/>
+  Contemplative Fitness by Kenneth Folk"/>
 
 
 
 <meta itemprop="name" content="useful links">
-<meta itemprop="description" content="Useful Links Teachers   Mahasi Sayadaw
-  Sayadaw U Tejaniya
+<meta itemprop="description" content="Useful Links Teachers   Sayadaw U Tejaniya
+  Loch Kelly
+  Diana Winston
    Suttas   SuttaCentral
   Pali Audio
-   Communities  r/streamentry (a practice oriented reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
+   Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
   Mastering the Core Teachings of the Buddha by Daniel Ingram
-  Contemplative Fitness by Kenneth Folk
-   Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)">
+  Contemplative Fitness by Kenneth Folk">
 
-<meta itemprop="wordCount" content="85"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="69"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -244,10 +244,13 @@
 <h2 id="teachers">Teachers</h2>
 <ul>
 <li>
-<p><a href="https://mahasivipassana.com">Mahasi Sayadaw</a></p>
+<p><a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a></p>
 </li>
 <li>
-<p><a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a></p>
+<p><a href="https://lochkelly.org">Loch Kelly</a></p>
+</li>
+<li>
+<p><a href="https://dianawinston.com/natural-awareness">Diana Winston</a></p>
 </li>
 </ul>
 <p> </p>
@@ -263,7 +266,7 @@
 <p> </p>
 <h2 id="communities">Communities</h2>
 <ul>
-<li><a href="https://www.reddit.com/r/streamentry/">r/streamentry</a> (a practice oriented reddit community)</li>
+<li><a href="https://www.reddit.com/r/streamentry/">r/streamentry</a> (a practice oriented Reddit community)</li>
 </ul>
 <p> </p>
 <h2 id="online-books">Online Books</h2>
@@ -291,25 +294,12 @@
 <p> </p>
 <h2 id="podcasts">Podcasts</h2>
 <ul>
-<li>
-<p><a href="https://deconstructingyourself.com/deconstructing-yourself-podcast">Deconstructing Yourself</a> by <a href="https://deconstructingyourself.com/michael-w-taft">Michael Taft</a></p>
-</li>
-<li>
-<p><a href="https://art19.com/shows/buddhist-geeks">Buddhist Geeks</a> by the <a href="https://www.buddhistgeeks.org/team">Buddhist Geeks team</a></p>
-</li>
-<li>
-<p><a href="https://www.guruviking.com/">Guru Viking</a> by Steve James</p>
-</li>
+<li><a href="https://zenstudiespodcast.com">Zen Studies</a></li>
 </ul>
 <p> </p>
 <h2 id="various">Various</h2>
 <ul>
-<li>
-<p><a href="https://thehamiltonproject.blogspot.com/">The Hamilton Project</a></p>
-</li>
-<li>
-<p><a href="https://www.meditator-x.com/">Meditator-X</a> (MettaJunkie&rsquo;s blog)</p>
-</li>
+<li><a href="https://www.meditator-x.com/">Meditator-X</a> (MettaJunkie&rsquo;s blog)</li>
 </ul>
 
 </content>
