--- a/info/index.html
+++ b/info/index.html
@@ -10,7 +10,7 @@
 <meta name="title" content="info" />
 <meta name="description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
 I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
-My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Sam Harris, etc.) and Soto Zen.
+My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Richard Lang, etc.) and Soto Zen.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request." />
@@ -20,7 +20,7 @@ If you found a typo or wrong formatting or any other issue, apart from sending a
 <meta property="og:title" content="info" />
 <meta property="og:description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
 I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
-My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Sam Harris, etc.) and Soto Zen.
+My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Richard Lang, etc.) and Soto Zen.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request." />
@@ -38,7 +38,7 @@ If you found a typo or wrong formatting or any other issue, apart from sending a
 <meta name="twitter:title" content="info"/>
 <meta name="twitter:description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
 I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
-My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Sam Harris, etc.) and Soto Zen.
+My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Richard Lang, etc.) and Soto Zen.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request."/>
@@ -48,7 +48,7 @@ If you found a typo or wrong formatting or any other issue, apart from sending a
 <meta itemprop="name" content="info">
 <meta itemprop="description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
 I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
-My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Sam Harris, etc.) and Soto Zen.
+My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Richard Lang, etc.) and Soto Zen.
  Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
 If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.">
@@ -236,7 +236,7 @@ If you found a typo or wrong formatting or any other issue, apart from sending a
 <h2 id="who-am-i">Who Am I?</h2>
 <p>I&rsquo;m a secular Buddhist and an <a href="https://vlzetko.com">amateur photographer</a>.</p>
 <p>I used to be a pragmatic <a href="https://mahasivipassana.com">Mahasi noting</a> geek, obsessed with the <a href="https://mahasivipassana.com/the-progress-of-insight-map/">Progress of Insight map</a>.</p>
-<p>My current practice is heavily influenced by <a href="https://ashintejaniya.org/">Asin Tejaniya</a>, various secular non-dual teachers (<a href="https://dianawinston.com">Diana Winston</a>, <a href="https://lochkelly.org">Loch Kelly</a>, <a href="https://samharris.org">Sam Harris</a>, etc.) and <a href="https://www.sotozen.com/eng">Soto Zen</a>.</p>
+<p>My current practice is heavily influenced by <a href="https://ashintejaniya.org/">Asin Tejaniya</a>, various secular non-dual teachers (<a href="https://dianawinston.com">Diana Winston</a>, <a href="https://lochkelly.org">Loch Kelly</a>, <a href="https://www.headless.org/contact/richard-lang.htm">Richard Lang</a>, etc.) and <a href="https://www.sotozen.com/eng">Soto Zen</a>.</p>
 <p> </p>
 <h2 id="contact">Contact</h2>
 <p>If you want to contact me, please send an email to:</p>
