--- a/info/index.html
+++ b/info/index.html
@@ -9,21 +9,23 @@
 <title>info | Reversed Siddhartha</title>
 <meta name="title" content="info" />
 <meta name="description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
-I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
-My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Richard Lang, etc.) and Soto Zen.
- Contact If you want to contact me, please send an email to:
-ns |at| mahasivipassana |dot| com
-If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request." />
+Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
+My current practice is heavily influenced by:
+  Asin Tejaniya
+  various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima)
+  Chan (Sheng Yen lineage)" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="info" />
 <meta property="og:description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
-I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
-My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Richard Lang, etc.) and Soto Zen.
- Contact If you want to contact me, please send an email to:
-ns |at| mahasivipassana |dot| com
-If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request." />
+Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
+My current practice is heavily influenced by:
+  Asin Tejaniya
+  various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima)
+  Chan (Sheng Yen lineage)" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/info/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
 
@@ -37,23 +39,25 @@ If you found a typo or wrong formatting or any other issue, apart from sending a
 
 <meta name="twitter:title" content="info"/>
 <meta name="twitter:description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
-I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
-My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Richard Lang, etc.) and Soto Zen.
- Contact If you want to contact me, please send an email to:
-ns |at| mahasivipassana |dot| com
-If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request."/>
+Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
+My current practice is heavily influenced by:
+  Asin Tejaniya
+  various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima)
+  Chan (Sheng Yen lineage)"/>
 
 
 
 <meta itemprop="name" content="info">
 <meta itemprop="description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
-I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
-My current practice is heavily influenced by Asin Tejaniya, various secular non-dual teachers (Diana Winston, Loch Kelly, Richard Lang, etc.) and Soto Zen.
- Contact If you want to contact me, please send an email to:
-ns |at| mahasivipassana |dot| com
-If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.">
+Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
+My current practice is heavily influenced by:
+  Asin Tejaniya
+  various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima)
+  Chan (Sheng Yen lineage)">
 
-<meta itemprop="wordCount" content="108"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="120"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -235,8 +239,22 @@ If you found a typo or wrong formatting or any other issue, apart from sending a
   <h1 id="info">Info</h1>
 <h2 id="who-am-i">Who Am I?</h2>
 <p>I&rsquo;m a secular Buddhist and an <a href="https://vlzetko.com">amateur photographer</a>.</p>
-<p>I used to be a pragmatic <a href="https://mahasivipassana.com">Mahasi noting</a> geek, obsessed with the <a href="https://mahasivipassana.com/the-progress-of-insight-map/">Progress of Insight map</a>.</p>
-<p>My current practice is heavily influenced by <a href="https://ashintejaniya.org/">Asin Tejaniya</a>, various secular non-dual teachers (<a href="https://dianawinston.com">Diana Winston</a>, <a href="https://lochkelly.org">Loch Kelly</a>, <a href="https://www.headless.org/contact/richard-lang.htm">Richard Lang</a>, etc.) and <a href="https://www.sotozen.com/eng">Soto Zen</a>.</p>
+<p>Until recently, I was a pragmatic <a href="https://mahasivipassana.com">Mahasi noting</a> geek, obsessed with the <a href="https://mahasivipassana.com/the-progress-of-insight-map/">Progress of Insight map</a>.</p>
+<p>My current practice is heavily influenced by:</p>
+<ul>
+<li>
+<p><a href="https://ashintejaniya.org/">Asin Tejaniya</a></p>
+</li>
+<li>
+<p>various secular non-dual teachers (<a href="https://lochkelly.org">Loch Kelly</a>, <a href="https://www.stephanbodian.org/">Stephan Bodian</a>, <a href="https://dianawinston.com">Diana Winston</a>, <a href="https://www.headless.org/contact/richard-lang.htm">Richard Lang</a>, etc.)</p>
+</li>
+<li>
+<p><a href="https://www.sotozen.com/eng">Soto Zen</a> (mainly <a href="https://en.wikipedia.org/wiki/K%C5%8Dd%C5%8D_Sawaki">Kōdō Sawaki</a> and <a href="https://en.wikipedia.org/wiki/Gud%C5%8D_Wafu_Nishijima">Gudo Wafu Nishijima</a>)</p>
+</li>
+<li>
+<p>Chan (<a href="https://en.wikipedia.org/wiki/Sheng-yen">Sheng Yen</a> lineage)</p>
+</li>
+</ul>
 <p> </p>
 <h2 id="contact">Contact</h2>
 <p>If you want to contact me, please send an email to:</p>
