minor text correction

--- a/info/index.html
+++ b/info/index.html
@@ -13,7 +13,7 @@ Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress
 My current practice is heavily influenced by:
   Asin Tejaniya
   various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
-  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima)
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)
   Chan (Sheng Yen lineage)" />
 <meta name="keywords" content="" />
 
@@ -24,7 +24,7 @@ Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress
 My current practice is heavily influenced by:
   Asin Tejaniya
   various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
-  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima)
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)
   Chan (Sheng Yen lineage)" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/info/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
@@ -43,7 +43,7 @@ Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress
 My current practice is heavily influenced by:
   Asin Tejaniya
   various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
-  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima)
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)
   Chan (Sheng Yen lineage)"/>
 
 
@@ -54,10 +54,10 @@ Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress
 My current practice is heavily influenced by:
   Asin Tejaniya
   various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
-  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima)
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)
   Chan (Sheng Yen lineage)">
 
-<meta itemprop="wordCount" content="120"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="121"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -249,7 +249,7 @@ My current practice is heavily influenced by:
 <p>various secular non-dual teachers (<a href="https://lochkelly.org">Loch Kelly</a>, <a href="https://www.stephanbodian.org/">Stephan Bodian</a>, <a href="https://dianawinston.com">Diana Winston</a>, <a href="https://www.headless.org/contact/richard-lang.htm">Richard Lang</a>, etc.)</p>
 </li>
 <li>
-<p><a href="https://www.sotozen.com/eng">Soto Zen</a> (mainly <a href="https://en.wikipedia.org/wiki/K%C5%8Dd%C5%8D_Sawaki">Kōdō Sawaki</a> and <a href="https://en.wikipedia.org/wiki/Gud%C5%8D_Wafu_Nishijima">Gudo Wafu Nishijima</a>)</p>
+<p><a href="https://www.sotozen.com/eng">Soto Zen</a> (mainly <a href="https://en.wikipedia.org/wiki/K%C5%8Dd%C5%8D_Sawaki">Kōdō Sawaki</a> and <a href="https://en.wikipedia.org/wiki/Gud%C5%8D_Wafu_Nishijima">Gudo Wafu Nishijima</a> lineages)</p>
 </li>
 <li>
 <p>Chan (<a href="https://en.wikipedia.org/wiki/Sheng-yen">Sheng Yen</a> lineage)</p>
