--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -49,7 +49,7 @@
  What about the &ldquo;mushroom culture&rdquo;? Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:
  &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so.">
 
-<meta itemprop="wordCount" content="465"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="468"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -274,6 +274,7 @@
 <ul>
 <li><a href="https://mahasivipassana.com/the-progress-of-insight-map/">The Progress of Insight (PoI) Map</a></li>
 </ul>
+<p>To be continued..</p>
 
 </content>
 <p>
