added Reading Faithfully link

--- a/links/index.html
+++ b/links/index.html
@@ -12,6 +12,7 @@
   Loch Kelly
   Diana Winston
    Suttas   SuttaCentral
+  Reading Faithfully
   Pali Audio
    Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
   Mastering the Core Teachings of the Buddha by Daniel Ingram
@@ -24,6 +25,7 @@
   Loch Kelly
   Diana Winston
    Suttas   SuttaCentral
+  Reading Faithfully
   Pali Audio
    Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
   Mastering the Core Teachings of the Buddha by Daniel Ingram
@@ -44,6 +46,7 @@
   Loch Kelly
   Diana Winston
    Suttas   SuttaCentral
+  Reading Faithfully
   Pali Audio
    Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
   Mastering the Core Teachings of the Buddha by Daniel Ingram
@@ -56,12 +59,13 @@
   Loch Kelly
   Diana Winston
    Suttas   SuttaCentral
+  Reading Faithfully
   Pali Audio
    Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
   Mastering the Core Teachings of the Buddha by Daniel Ingram
   Contemplative Fitness by Kenneth Folk">
 
-<meta itemprop="wordCount" content="69"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="71"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -258,6 +262,9 @@
 <ul>
 <li>
 <p><a href="https://suttacentral.net/">SuttaCentral</a></p>
+</li>
+<li>
+<p><a href="https://readingfaithfully.org/sutta-pitaka-e-books-epub-mobi-kindle/">Reading Faithfully</a></p>
 </li>
 <li>
 <p><a href="https://www.paliaudio.com">Pali Audio</a></p>
