updated info and links pages

--- a/info/index.html
+++ b/info/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
 Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
 My current practice is heavily influenced by:
-  Asin Tejaniya
+  Sayadaw U Tejaniya
   various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
   Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)
   Chan (Sheng Yen lineage)" />
@@ -22,7 +22,7 @@ My current practice is heavily influenced by:
 <meta property="og:description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
 Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
 My current practice is heavily influenced by:
-  Asin Tejaniya
+  Sayadaw U Tejaniya
   various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
   Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)
   Chan (Sheng Yen lineage)" />
@@ -41,7 +41,7 @@ My current practice is heavily influenced by:
 <meta name="twitter:description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
 Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
 My current practice is heavily influenced by:
-  Asin Tejaniya
+  Sayadaw U Tejaniya
   various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
   Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)
   Chan (Sheng Yen lineage)"/>
@@ -52,12 +52,12 @@ My current practice is heavily influenced by:
 <meta itemprop="description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
 Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
 My current practice is heavily influenced by:
-  Asin Tejaniya
+  Sayadaw U Tejaniya
   various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
   Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)
   Chan (Sheng Yen lineage)">
 
-<meta itemprop="wordCount" content="121"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="122"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -243,7 +243,7 @@ My current practice is heavily influenced by:
 <p>My current practice is heavily influenced by:</p>
 <ul>
 <li>
-<p><a href="https://ashintejaniya.org/">Asin Tejaniya</a></p>
+<p><a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a></p>
 </li>
 <li>
 <p>various secular non-dual teachers (<a href="https://lochkelly.org">Loch Kelly</a>, <a href="https://www.stephanbodian.org/">Stephan Bodian</a>, <a href="https://dianawinston.com">Diana Winston</a>, <a href="https://www.headless.org/contact/richard-lang.htm">Richard Lang</a>, etc.)</p>
