--- a/links/index.html
+++ b/links/index.html
@@ -9,27 +9,29 @@
 <title>useful links | Reversed Siddhartha</title>
 <meta name="title" content="useful links" />
 <meta name="description" content="Useful Links Teachers   Sayadaw U Tejaniya
+  Sheng Yen
   Loch Kelly
+  Stephan Bodian
   Diana Winston
    Suttas   SuttaCentral
   Reading Faithfully
   Pali Audio
    Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
-  Mastering the Core Teachings of the Buddha by Daniel Ingram
-  Contemplative Fitness by Kenneth Folk" />
+  Mastering the Core Teachings of the Buddha by Daniel Ingram" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="useful links" />
 <meta property="og:description" content="Useful Links Teachers   Sayadaw U Tejaniya
+  Sheng Yen
   Loch Kelly
+  Stephan Bodian
   Diana Winston
    Suttas   SuttaCentral
   Reading Faithfully
   Pali Audio
    Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
-  Mastering the Core Teachings of the Buddha by Daniel Ingram
-  Contemplative Fitness by Kenneth Folk" />
+  Mastering the Core Teachings of the Buddha by Daniel Ingram" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/links/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
 
@@ -43,29 +45,31 @@
 
 <meta name="twitter:title" content="useful links"/>
 <meta name="twitter:description" content="Useful Links Teachers   Sayadaw U Tejaniya
+  Sheng Yen
   Loch Kelly
+  Stephan Bodian
   Diana Winston
    Suttas   SuttaCentral
   Reading Faithfully
   Pali Audio
    Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
-  Mastering the Core Teachings of the Buddha by Daniel Ingram
-  Contemplative Fitness by Kenneth Folk"/>
+  Mastering the Core Teachings of the Buddha by Daniel Ingram"/>
 
 
 
 <meta itemprop="name" content="useful links">
 <meta itemprop="description" content="Useful Links Teachers   Sayadaw U Tejaniya
+  Sheng Yen
   Loch Kelly
+  Stephan Bodian
   Diana Winston
    Suttas   SuttaCentral
   Reading Faithfully
   Pali Audio
    Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
-  Mastering the Core Teachings of the Buddha by Daniel Ingram
-  Contemplative Fitness by Kenneth Folk">
+  Mastering the Core Teachings of the Buddha by Daniel Ingram">
 
-<meta itemprop="wordCount" content="71"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="75"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -251,7 +255,13 @@
 <p><a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a></p>
 </li>
 <li>
+<p><a href="https://en.wikipedia.org/wiki/Sheng-yen">Sheng Yen</a></p>
+</li>
+<li>
 <p><a href="https://lochkelly.org">Loch Kelly</a></p>
+</li>
+<li>
+<p><a href="https://www.stephanbodian.org/">Stephan Bodian</a></p>
 </li>
 <li>
 <p><a href="https://dianawinston.com/natural-awareness">Diana Winston</a></p>
