--- a/info/index.html
+++ b/info/index.html
@@ -8,24 +8,22 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>info | Reversed Siddhartha</title>
 <meta name="title" content="info" />
-<meta name="description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
-Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
+<meta name="description" content="Info Who Am I? It really doesn&rsquo;t matter at all who I am, but let me give you some context.
+I&rsquo;m a secular Buddhist and an amateur photographer.
+I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map, until I decided to stop chasing my tail.
 My current practice is heavily influenced by:
   Sayadaw U Tejaniya
-  various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
-  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)
-  Chan (Sheng Yen lineage)" />
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="info" />
-<meta property="og:description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
-Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
+<meta property="og:description" content="Info Who Am I? It really doesn&rsquo;t matter at all who I am, but let me give you some context.
+I&rsquo;m a secular Buddhist and an amateur photographer.
+I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map, until I decided to stop chasing my tail.
 My current practice is heavily influenced by:
   Sayadaw U Tejaniya
-  various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
-  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)
-  Chan (Sheng Yen lineage)" />
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/info/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
 
@@ -38,26 +36,24 @@ My current practice is heavily influenced by:
 <meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="info"/>
-<meta name="twitter:description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
-Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
+<meta name="twitter:description" content="Info Who Am I? It really doesn&rsquo;t matter at all who I am, but let me give you some context.
+I&rsquo;m a secular Buddhist and an amateur photographer.
+I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map, until I decided to stop chasing my tail.
 My current practice is heavily influenced by:
   Sayadaw U Tejaniya
-  various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
-  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)
-  Chan (Sheng Yen lineage)"/>
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)"/>
 
 
 
 <meta itemprop="name" content="info">
-<meta itemprop="description" content="Info Who Am I? I&rsquo;m a secular Buddhist and an amateur photographer.
-Until recently, I was a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map.
+<meta itemprop="description" content="Info Who Am I? It really doesn&rsquo;t matter at all who I am, but let me give you some context.
+I&rsquo;m a secular Buddhist and an amateur photographer.
+I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map, until I decided to stop chasing my tail.
 My current practice is heavily influenced by:
   Sayadaw U Tejaniya
-  various secular non-dual teachers (Loch Kelly, Stephan Bodian, Diana Winston, Richard Lang, etc.)
-  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)
-  Chan (Sheng Yen lineage)">
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)">
 
-<meta itemprop="wordCount" content="122"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="188"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -238,15 +234,13 @@ My current practice is heavily influenced by:
 <content>
   <h1 id="info">Info</h1>
 <h2 id="who-am-i">Who Am I?</h2>
+<p>It really doesn&rsquo;t matter at all who I am, but let me give you some context.</p>
 <p>I&rsquo;m a secular Buddhist and an <a href="https://vlzetko.com">amateur photographer</a>.</p>
-<p>Until recently, I was a pragmatic <a href="https://mahasivipassana.com">Mahasi noting</a> geek, obsessed with the <a href="https://mahasivipassana.com/the-progress-of-insight-map/">Progress of Insight map</a>.</p>
+<p>I used to be a pragmatic <a href="https://mahasivipassana.com">Mahasi noting</a> geek, obsessed with the <a href="https://mahasivipassana.com/the-progress-of-insight-map/">Progress of Insight map</a>, until I decided to stop chasing my tail.</p>
 <p>My current practice is heavily influenced by:</p>
 <ul>
 <li>
 <p><a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a></p>
-</li>
-<li>
-<p>various secular non-dual teachers (<a href="https://lochkelly.org">Loch Kelly</a>, <a href="https://www.stephanbodian.org/">Stephan Bodian</a>, <a href="https://dianawinston.com">Diana Winston</a>, <a href="https://www.headless.org/contact/richard-lang.htm">Richard Lang</a>, etc.)</p>
 </li>
 <li>
 <p><a href="https://www.sotozen.com/eng">Soto Zen</a> (mainly <a href="https://en.wikipedia.org/wiki/K%C5%8Dd%C5%8D_Sawaki">Kōdō Sawaki</a> and <a href="https://en.wikipedia.org/wiki/Gud%C5%8D_Wafu_Nishijima">Gudo Wafu Nishijima</a> lineages)</p>
@@ -254,7 +248,11 @@ My current practice is heavily influenced by:
 <li>
 <p>Chan (<a href="https://en.wikipedia.org/wiki/Sheng-yen">Sheng Yen</a> lineage)</p>
 </li>
+<li>
+<p>various secular non-dual teachers (<a href="https://lochkelly.org">Loch Kelly</a>, <a href="https://www.stephanbodian.org/">Stephan Bodian</a>, <a href="https://dianawinston.com">Diana Winston</a>, <a href="https://www.headless.org/contact/richard-lang.htm">Richard Lang</a>, etc.)</p>
+</li>
 </ul>
+<p>Recently, I gained interest in <a href="https://suttacentral.net/">Early Buddhist Texts</a>, not as a means to follow the &ldquo;real path&rdquo; or whatever. I just lost interest in &ldquo;Buddhist psychology&rdquo; books and became curious to learn from the most accurate source, what probably Siddhartha Gautama taught.</p>
 <p> </p>
 <h2 id="contact">Contact</h2>
 <p>If you want to contact me, please send an email to:</p>
