--- a/links/index.html
+++ b/links/index.html
@@ -8,30 +8,34 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
 <title>useful links | Reversed Siddhartha</title>
 <meta name="title" content="useful links" />
-<meta name="description" content="Useful Links Teachers   Sayadaw U Tejaniya
+<meta name="description" content="Useful Links Early Buddhism   In the Buddha’s Words (open source edition)
+  SuttaCentral
+  Reading Faithfully
+  Pali Audio
+   Teachers   Sayadaw U Tejaniya
   Sheng Yen
   Loch Kelly
   Stephan Bodian
   Diana Winston
-   Suttas   SuttaCentral
-  Reading Faithfully
-  Pali Audio
-   Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
-  Mastering the Core Teachings of the Buddha by Daniel Ingram" />
+   Communities   r/streamentry
+  r/awakeawareness
+   Online Books  Mindfulness in Plain English by Ven." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="useful links" />
-<meta property="og:description" content="Useful Links Teachers   Sayadaw U Tejaniya
+<meta property="og:description" content="Useful Links Early Buddhism   In the Buddha’s Words (open source edition)
+  SuttaCentral
+  Reading Faithfully
+  Pali Audio
+   Teachers   Sayadaw U Tejaniya
   Sheng Yen
   Loch Kelly
   Stephan Bodian
   Diana Winston
-   Suttas   SuttaCentral
-  Reading Faithfully
-  Pali Audio
-   Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
-  Mastering the Core Teachings of the Buddha by Daniel Ingram" />
+   Communities   r/streamentry
+  r/awakeawareness
+   Online Books  Mindfulness in Plain English by Ven." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/links/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
 
@@ -44,32 +48,36 @@
 <meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
 
 <meta name="twitter:title" content="useful links"/>
-<meta name="twitter:description" content="Useful Links Teachers   Sayadaw U Tejaniya
+<meta name="twitter:description" content="Useful Links Early Buddhism   In the Buddha’s Words (open source edition)
+  SuttaCentral
+  Reading Faithfully
+  Pali Audio
+   Teachers   Sayadaw U Tejaniya
   Sheng Yen
   Loch Kelly
   Stephan Bodian
   Diana Winston
-   Suttas   SuttaCentral
-  Reading Faithfully
-  Pali Audio
-   Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
-  Mastering the Core Teachings of the Buddha by Daniel Ingram"/>
+   Communities   r/streamentry
+  r/awakeawareness
+   Online Books  Mindfulness in Plain English by Ven."/>
 
 
 
 <meta itemprop="name" content="useful links">
-<meta itemprop="description" content="Useful Links Teachers   Sayadaw U Tejaniya
+<meta itemprop="description" content="Useful Links Early Buddhism   In the Buddha’s Words (open source edition)
+  SuttaCentral
+  Reading Faithfully
+  Pali Audio
+   Teachers   Sayadaw U Tejaniya
   Sheng Yen
   Loch Kelly
   Stephan Bodian
   Diana Winston
-   Suttas   SuttaCentral
-  Reading Faithfully
-  Pali Audio
-   Communities  r/streamentry (a practice oriented Reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
-  Mastering the Core Teachings of the Buddha by Daniel Ingram">
+   Communities   r/streamentry
+  r/awakeawareness
+   Online Books  Mindfulness in Plain English by Ven.">
 
-<meta itemprop="wordCount" content="75"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="56"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -249,6 +257,22 @@
 
 <content>
   <h1 id="useful-links">Useful Links</h1>
+<h2 id="early-buddhism">Early Buddhism</h2>
+<ul>
+<li>
+<p><a href="https://readingfaithfully.org/in-the-buddhas-words-an-anthology-of-discourses-from-the-pali-canon-linked-to-suttacentral-net/">In the Buddha’s Words (open source edition)</a></p>
+</li>
+<li>
+<p><a href="https://suttacentral.net/">SuttaCentral</a></p>
+</li>
+<li>
+<p><a href="https://readingfaithfully.org/sutta-pitaka-e-books-epub-mobi-kindle/">Reading Faithfully</a></p>
+</li>
+<li>
+<p><a href="https://www.paliaudio.com">Pali Audio</a></p>
+</li>
+</ul>
+<p> </p>
 <h2 id="teachers">Teachers</h2>
 <ul>
 <li>
@@ -268,45 +292,24 @@
 </li>
 </ul>
 <p> </p>
-<h2 id="suttas">Suttas</h2>
-<ul>
-<li>
-<p><a href="https://suttacentral.net/">SuttaCentral</a></p>
-</li>
-<li>
-<p><a href="https://readingfaithfully.org/sutta-pitaka-e-books-epub-mobi-kindle/">Reading Faithfully</a></p>
-</li>
-<li>
-<p><a href="https://www.paliaudio.com">Pali Audio</a></p>
-</li>
-</ul>
-<p> </p>
 <h2 id="communities">Communities</h2>
 <ul>
-<li><a href="https://www.reddit.com/r/streamentry/">r/streamentry</a> (a practice oriented Reddit community)</li>
+<li>
+<p><a href="https://www.reddit.com/r/streamentry/">r/streamentry</a></p>
+</li>
+<li>
+<p><a href="https://www.reddit.com/r/awakeawareness/">r/awakeawareness</a></p>
+</li>
 </ul>
 <p> </p>
 <h2 id="online-books">Online Books</h2>
 <ul>
-<li>
-<p><a href="https://www.vipassana.com/meditation/mindfulness_in_plain_english.php">Mindfulness in Plain English</a> by Ven. Henepola Gunaratana</p>
-</li>
-<li>
-<p><a href="https://www.mctb.org/">Mastering the Core Teachings of the Buddha</a> by Daniel Ingram</p>
-</li>
-<li>
-<p><a href="https://eudoxos.github.io/cfitness/html/index.html">Contemplative Fitness</a> by Kenneth Folk</p>
-</li>
+<li><a href="https://www.vipassana.com/meditation/mindfulness_in_plain_english.php">Mindfulness in Plain English</a> by Ven. Henepola Gunaratana</li>
 </ul>
 <p> </p>
 <h2 id="youtube">Youtube</h2>
 <ul>
-<li>
-<p><a href="https://www.youtube.com/channel/UCPIyEJzvW7SsbiIrooixjNA/videos">Doug&rsquo;s Dharma</a> (an amazing secular/early Buddhism resource)</p>
-</li>
-<li>
-<p><a href="https://www.youtube.com/watch?v=54l8_ewcOlY&amp;list=PLND1JCRq8Vuh3f0P5qjrSdb5eC1ZfZwWJ">Awakening from the Meaning Crisis</a> by <a href="https://www.psych.utoronto.ca/people/directories/all-faculty/john-vervaeke">John Vervaeke</a></p>
-</li>
+<li><a href="https://www.youtube.com/channel/UCPIyEJzvW7SsbiIrooixjNA/videos">Doug&rsquo;s Dharma</a> (an amazing secular/early Buddhism resource)</li>
 </ul>
 <p> </p>
 <h2 id="podcasts">Podcasts</h2>
