--- a/links/index.html
+++ b/links/index.html
@@ -10,7 +10,6 @@
 <meta name="title" content="useful links" />
 <meta name="description" content="Useful Links Early Buddhism   In the Buddha’s Words (open source edition)
   SuttaCentral
-  Reading Faithfully
   Pali Audio
    Teachers   Sayadaw U Tejaniya
   Sheng Yen
@@ -19,14 +18,13 @@
   Diana Winston
    Communities   r/streamentry
   r/awakeawareness
-   Online Books  Mindfulness in Plain English by Ven." />
+   Online Books  Mindfulness in Plain English by Ven. Henepola Gunaratana   Youtube  Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)   Podcasts  Zen Studies   Various  Meditator-X (MettaJunkie&rsquo;s blog)  " />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="useful links" />
 <meta property="og:description" content="Useful Links Early Buddhism   In the Buddha’s Words (open source edition)
   SuttaCentral
-  Reading Faithfully
   Pali Audio
    Teachers   Sayadaw U Tejaniya
   Sheng Yen
@@ -35,7 +33,7 @@
   Diana Winston
    Communities   r/streamentry
   r/awakeawareness
-   Online Books  Mindfulness in Plain English by Ven." />
+   Online Books  Mindfulness in Plain English by Ven. Henepola Gunaratana   Youtube  Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)   Podcasts  Zen Studies   Various  Meditator-X (MettaJunkie&rsquo;s blog)  " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/links/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
 
@@ -50,7 +48,6 @@
 <meta name="twitter:title" content="useful links"/>
 <meta name="twitter:description" content="Useful Links Early Buddhism   In the Buddha’s Words (open source edition)
   SuttaCentral
-  Reading Faithfully
   Pali Audio
    Teachers   Sayadaw U Tejaniya
   Sheng Yen
@@ -59,14 +56,13 @@
   Diana Winston
    Communities   r/streamentry
   r/awakeawareness
-   Online Books  Mindfulness in Plain English by Ven."/>
+   Online Books  Mindfulness in Plain English by Ven. Henepola Gunaratana   Youtube  Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)   Podcasts  Zen Studies   Various  Meditator-X (MettaJunkie&rsquo;s blog)  "/>
 
 
 
 <meta itemprop="name" content="useful links">
 <meta itemprop="description" content="Useful Links Early Buddhism   In the Buddha’s Words (open source edition)
   SuttaCentral
-  Reading Faithfully
   Pali Audio
    Teachers   Sayadaw U Tejaniya
   Sheng Yen
@@ -75,9 +71,9 @@
   Diana Winston
    Communities   r/streamentry
   r/awakeawareness
-   Online Books  Mindfulness in Plain English by Ven.">
+   Online Books  Mindfulness in Plain English by Ven. Henepola Gunaratana   Youtube  Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)   Podcasts  Zen Studies   Various  Meditator-X (MettaJunkie&rsquo;s blog)  ">
 
-<meta itemprop="wordCount" content="56"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="54"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -264,9 +260,6 @@
 </li>
 <li>
 <p><a href="https://suttacentral.net/">SuttaCentral</a></p>
-</li>
-<li>
-<p><a href="https://readingfaithfully.org/sutta-pitaka-e-books-epub-mobi-kindle/">Reading Faithfully</a></p>
 </li>
 <li>
 <p><a href="https://www.paliaudio.com">Pali Audio</a></p>
