fixed dead link

--- a/links/index.html
+++ b/links/index.html
@@ -297,7 +297,7 @@
 <p> </p>
 <h2 id="online-books">Online Books</h2>
 <ul>
-<li><a href="https://www.vipassana.com/meditation/mindfulness_in_plain_english.php">Mindfulness in Plain English</a> by Ven. Henepola Gunaratana</li>
+<li><a href="https://www.vipassana.com/meditation/mindfulness_in_plain_english.html">Mindfulness in Plain English</a> by Ven. Henepola Gunaratana</li>
 </ul>
 <p> </p>
 <h2 id="youtube">Youtube</h2>
