--- a/info/index.html
+++ b/info/index.html
@@ -53,7 +53,7 @@ My current practice is heavily influenced by:
   Sayadaw U Tejaniya
   Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)">
 
-<meta itemprop="wordCount" content="188"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="190"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -255,9 +255,8 @@ My current practice is heavily influenced by:
 <p>Recently, I gained interest in <a href="https://suttacentral.net/">Early Buddhist Texts</a>, not as a means to follow the &ldquo;real path&rdquo; or whatever. I just lost interest in &ldquo;Buddhist psychology&rdquo; books and became curious to learn from the most accurate source, what probably Siddhartha Gautama taught.</p>
 <p> </p>
 <h2 id="contact">Contact</h2>
-<p>If you want to contact me, please send an email to:</p>
-<p><code>ns |at| mahasivipassana |dot| com</code></p>
-<p>If you found a typo or wrong formatting or any other issue, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.</p>
+<p>If you found a typo or an issue with formatting etc., please consider opening an issue ticket on the relevant repository on my <a href="https://github.com/ahtrahddis?tab=repositories">Github page</a>. You can also fork my repo, make the proposed change and push back to me.</p>
+<p>For any other inquiry, please open a ticket <a href="https://github.com/ahtrahddis/ahtrahddis.github.io/issues">here</a>.</p>
 <p> </p>
 <h2 id="website">Website</h2>
 <p><strong>RS</strong> was built using <a href="https://gohugo.io/">hugo</a> and  <a href="https://github.com/janraasch/hugo-bearblog">hugo bearblog</a>.</p>
